--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8" />
 <title>Scheduler App</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable@14.3.0/dist/handsontable.full.min.css">
-<script src="https://cdn.jsdelivr.net/npm/handsontable@14.3.0/dist/handsontable.full.min.js"></script>
 <style>
   body { font-family: Arial, sans-serif; margin: 18px; }
   nav { margin-bottom: 12px; }
@@ -69,12 +68,14 @@
     <div id="summarySite"></div>
   </div>
 
-<!-- ===== Firebase SDK (ADDED) ===== -->
 <script type="module">
+/* ========= ES-Module imports (CSP-safe, no eval) ========= */
+import Handsontable from "https://cdn.jsdelivr.net/npm/handsontable@14.3.0/dist/handsontable.full.es.js";
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
+/* ========= Firebase init (inline, as requested) ========= */
 const firebaseConfig = {
   apiKey: "AIzaSyCfwfn-7WFnKNv-rdomdHxWU11WMIk7-NQ",
   authDomain: "crcscheduler.firebaseapp.com",
@@ -86,36 +87,28 @@ const firebaseConfig = {
 };
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
-signInAnonymously(getAuth(app)).then(()=>console.log("[auth] signed in")).catch(console.error);
+await signInAnonymously(getAuth(app)).catch(console.error);
 
-// expose to non-module script below
-window.firebaseBits = { db, doc, setDoc, onSnapshot };
-</script>
-<!-- ===== End Firebase SDK ===== -->
-
-<script>
-/* ---------------- Shared State ---------------- */
+/* ========= Your original app state & helpers ========= */
 let monthStore={}, current=new Date(), hot, directoryHot;
 let lastSel=null, clipboardMeta=null;
 const COLS_PER_DAY=2, DAYS_PER_WEEK=7, TOTAL_COLS=DAYS_PER_WEEK*COLS_PER_DAY;
 let bodyRows=[];
-let unwatchMonth=null; // (ADDED) to manage Firestore listener
+let unwatchMonth=null;
 
-/* ===== Firebase bindings (ADDED) ===== */
-const { db, doc, setDoc, onSnapshot } = window.firebaseBits || {};
-function monthKey(y,m){ return `${y}-${String(m+1).padStart(2,'0')}`; }
-// Flatten/unflatten to avoid nested arrays error (ADDED)
+/* Flatten/unflatten to avoid Firestore nested array limitation */
 function flatten2D(arr){ return arr.map((row,i)=>({row:i, values: row.slice()})); }
 function unflatten2D(objs){ return (objs||[]).map(o=>o.values); }
 
-/* ---------------- Page Switching ---------------- */
 function showPage(id){
   document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
   document.getElementById(id).classList.add('active');
   if(id==='reportsPage') refreshMonthSelect();
 }
+window.showPage = showPage; // expose for buttons
 
-/* ---------------- Calendar Helpers ---------------- */
+function monthKey(y,m){ return `${y}-${String(m+1).padStart(2,'0')}`; }
+
 function startOfCalendar(year, monthIdx){
   const first=new Date(year,monthIdx,1);
   const dow=(first.getDay()+6)%7; // Mon=0
@@ -147,13 +140,11 @@ function buildWeekMatrix(year, monthIdx, weeks){
   return matrix;
 }
 
-/* ---------------- Data ---------------- */
 function buildDataFor(y,m,weeks,br){
   const rows=br.reduce((s,b)=>s+1+b,0);
   return Array.from({length:rows},()=>Array(TOTAL_COLS).fill(""));
 }
 
-/* ---------------- Renderer ---------------- */
 function colorRenderer(instance, td, row, col, prop, value, cellProps){
   Handsontable.renderers.TextRenderer.apply(this, arguments);
 
@@ -161,7 +152,6 @@ function colorRenderer(instance, td, row, col, prop, value, cellProps){
   const color=monthStore[key]?.meta?.[`${row}:${col}`];
   if(color) td.style.background=color;
 
-  // Grey out full day columns outside the month
   const state = monthStore[key];
   if (state && state.calendar) {
     const weekIdx = weekIndexForRow(row);
@@ -179,11 +169,10 @@ function colorRenderer(instance, td, row, col, prop, value, cellProps){
   if(col%2===1) td.classList.add('day-sep');
 }
 
-/* ---------------- Scheduler ---------------- */
 function weekStarts(){let starts=[],acc=0;for(let i=0;i<bodyRows.length;i++){starts.push(acc);acc+=1+bodyRows[i];}return starts;}
 function weekIndexForRow(rowIdx){const starts=weekStarts();for(let i=0;i<bodyRows.length;i++){if(rowIdx>=starts[i]&&rowIdx<=starts[i]+bodyRows[i])return i;}return -1;}
 
-function renderMonth(){
+async function renderMonth(){
   const y=current.getFullYear(), m=current.getMonth(), key=monthKey(y,m);
   const weeks=numWeeks(y,m);
   if(!monthStore[key]){
@@ -201,12 +190,11 @@ function renderMonth(){
       acc+=1+br[w];
     }
     monthStore[key]={data,bodyRows:br,meta:{},dayMeta,calendar:matrix,shiftLog:[],summary:[],summaryStudy:[],summarySite:[]};
-
-    // Create the Firestore doc now so listeners see it (ADDED)
-    saveMonth(key);
+    await saveMonth(key); // create initial doc so listener has something
   }
   bodyRows=monthStore[key].bodyRows.slice();
   document.getElementById("monthLabel").textContent=current.toLocaleString('default',{month:'long'})+" "+y;
+
   if(hot) hot.destroy();
   hot=new Handsontable(document.getElementById('grid'),{
     data:monthStore[key].data,
@@ -222,51 +210,68 @@ function renderMonth(){
         const color=monthStore[key]?.meta?.[`${r}:${c}`]||null;
         clipboardMeta.push({r:r-startRow,c:c-startCol,color});
       }});},
-    // persist meta colors that were copied (ADDED: saveMonth)
-    afterPaste:(data,coords)=>{if(!clipboardMeta)return;const {startRow,startCol}=coords[0];const key=monthKey(current.getFullYear(),current.getMonth());
-      clipboardMeta.forEach(item=>{if(item.color){const rr=startRow+item.r,cc=startCol+item.c;monthStore[key].meta[`${rr}:${cc}`]=item.color;}});hot.render();saveMonth(key);},
-    // persist text edits (ADDED)
-    afterChange:(changes, source)=>{ if(source!=='loadData'){ const key=monthKey(current.getFullYear(),current.getMonth()); saveMonth(key);} }
+    afterPaste:(data,coords)=>{ // persist pasted colors
+      if(!clipboardMeta) return;
+      const {startRow,startCol}=coords[0];
+      const key=monthKey(current.getFullYear(),current.getMonth());
+      clipboardMeta.forEach(item=>{
+        if(item.color){
+          const rr=startRow+item.r, cc=startCol+item.c;
+          monthStore[key].meta[`${rr}:${cc}`]=item.color;
+        }
+      });
+      hot.render(); saveMonth(key);
+    },
+    afterChange:(changes, source)=>{ if(source!=='loadData'){ saveMonth(key); } }
   });
 
-  // Attach/refresh real-time listener for this month (ADDED)
   attachMonthListener(key);
 }
-function prevMonth(){ current.setMonth(current.getMonth()-1); renderMonth(); }
-function nextMonth(){ current.setMonth(current.getMonth()+1); renderMonth(); }
+window.prevMonth = function(){ current.setMonth(current.getMonth()-1); renderMonth(); }
+window.nextMonth = function(){ current.setMonth(current.getMonth()+1); renderMonth(); }
 
-/* ===== Firestore persistence (ADDED) ===== */
-function saveMonth(key){
-  if(!db) return;
-  const state=monthStore[key]; if(!state) return;
-  const cleanData = flatten2D(state.data);
-  const calendar=(state.calendar||[]).map(w=>w.map(d=>({date:d.date.toISOString(),inMonth:d.inMonth})));
-  setDoc(doc(db,"months",key),{
-    data:cleanData,
-    meta:state.meta||{},
-    bodyRows:state.bodyRows||[],
-    calendar
-  },{merge:true}).then(()=>console.log("[saveMonth]",key,"ok"))
-    .catch(e=>console.error("[saveMonth] error",e));
+/* ===== Firestore persistence ===== */
+async function saveMonth(key){
+  try{
+    const state=monthStore[key];
+    if(!state) return;
+    const cleanData = flatten2D(state.data);
+    const calendar=(state.calendar||[]).map(w=>w.map(d=>({date:d.date.toISOString(),inMonth:d.inMonth})));
+    await setDoc(doc(db,"months",key),{
+      data:cleanData,
+      meta:state.meta||{},
+      bodyRows:state.bodyRows||[],
+      calendar
+    },{merge:true});
+  }catch(e){ console.error("[saveMonth] error", e); }
 }
 function attachMonthListener(key){
-  if(!db) return;
   if(unwatchMonth){unwatchMonth(); unwatchMonth=null;}
   unwatchMonth=onSnapshot(doc(db,"months",key),(snap)=>{
     if(!snap.exists()) return;
     const s=snap.data();
     const rows = unflatten2D(s.data||[]);
     const calendar=(s.calendar||[]).map(w=>w.map(d=>({date:new Date(d.date),inMonth:d.inMonth})));
-    // keep other fields intact
+    // merge into local store
     monthStore[key]={...monthStore[key],data:rows,meta:s.meta||{},bodyRows:s.bodyRows||[],calendar};
     bodyRows=monthStore[key].bodyRows.slice();
-    if(hot){hot.loadData(monthStore[key].data);hot.render();}
+    if(hot){ hot.loadData(monthStore[key].data); hot.render(); }
   });
 }
 
-/* ---------------- Colors ---------------- */
+/* ===== Colors palette & apply (unchanged except save) ===== */
 const colors=["#f28b82","#fbbc04","#fff475","#ccff90","#a7ffeb","#cbf0f8","#aecbfa","#d7aefb","#fdcfe8","#e6c9a8","#e8eaed","#d50000","#c51162","#aa00ff","#304ffe","#2962ff","#0091ea","#00b8d4","#00c853","#64dd17"];
-(function(){const p=document.getElementById('palette');colors.forEach(c=>{let sw=document.createElement('div');sw.className='swatch';sw.style.background=c;sw.onclick=()=>applyColor(c);p.appendChild(sw);});let clr=document.createElement('div');clr.className='swatch clear';clr.textContent='×';clr.onclick=()=>applyColor(null);p.appendChild(clr);})();
+(function(){
+  const p=document.getElementById('palette');
+  colors.forEach(c=>{
+    const sw=document.createElement('div');
+    sw.className='swatch'; sw.style.background=c; sw.addEventListener('click',()=>applyColor(c));
+    p.appendChild(sw);
+  });
+  const clr=document.createElement('div');
+  clr.className='swatch clear'; clr.textContent='×'; clr.addEventListener('click',()=>applyColor(null));
+  p.appendChild(clr);
+})();
 function applyColor(color){
   const sel=lastSel||hot.getSelectedLast(); if(!sel)return;
   const [r1,c1,r2,c2]=sel; const key=monthKey(current.getFullYear(),current.getMonth());
@@ -275,49 +280,60 @@ function applyColor(color){
     for(let c=Math.min(c1,c2);c<=Math.max(c1,c2);c++){
       if(color) monthStore[key].meta[`${r}:${c}`]=color; else delete monthStore[key].meta[`${r}:${c}`];
     }}
-  hot.render();
-  // persist color changes (ADDED)
-  saveMonth(key);
+  hot.render(); saveMonth(key);
 }
 
-/* ---------------- Add/Delete Rows ---------------- */
+/* ===== Add/Delete rows (unchanged except save) ===== */
 function shiftMeta(meta, startRow, delta){
   const newMeta={};
-  Object.entries(meta).forEach(([k,v])=>{
+  Object.entries(meta||{}).forEach(([k,v])=>{
     let [r,c]=k.split(":").map(Number);
     if(r>=startRow) r+=delta;
     newMeta[`${r}:${c}`]=v;
   });
   return newMeta;
 }
-function addRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);
-  const sel=lastSel||hot.getSelectedLast(); if(!sel)return; const w=weekIndexForRow(sel[0]); if(w<0)return;
-  const key=monthKey(current.getFullYear(),current.getMonth()); const start=weekStarts()[w]+1;
+window.addRows = function(){
+  const n=parseInt(document.getElementById('rowsToModify').value||'1',10);
+  const sel=lastSel||hot.getSelectedLast(); if(!sel)return;
+  const w=weekIndexForRow(sel[0]); if(w<0)return;
+  const key=monthKey(current.getFullYear(),current.getMonth());
+  const start=weekStarts()[w]+1;
   bodyRows[w]+=n; monthStore[key].bodyRows=bodyRows.slice();
   monthStore[key].data.splice(start,0,...Array.from({length:n},()=>Array(TOTAL_COLS).fill("")));
   monthStore[key].meta=shiftMeta(monthStore[key].meta,start,n);
-  renderMonth();
-  // persist row structure (ADDED)
-  saveMonth(key);}
-function delRows(){const n=parseInt(document.getElementById('rowsToModify').value||'1',10);
-  const sel=lastSel||hot.getSelectedLast(); if(!sel)return; const w=weekIndexForRow(sel[0]); if(w<0)return;
-  if(bodyRows[w]<=n)return; const key=monthKey(current.getFullYear(),current.getMonth()); const start=weekStarts()[w]+1;
+  renderMonth(); saveMonth(key);
+}
+window.delRows = function(){
+  const n=parseInt(document.getElementById('rowsToModify').value||'1',10);
+  const sel=lastSel||hot.getSelectedLast(); if(!sel)return;
+  const w=weekIndexForRow(sel[0]); if(w<0)return;
+  if(bodyRows[w]<=n)return;
+  const key=monthKey(current.getFullYear(),current.getMonth());
+  const start=weekStarts()[w]+1;
   bodyRows[w]-=n; monthStore[key].bodyRows=bodyRows.slice();
   monthStore[key].data.splice(start,n);
   monthStore[key].meta=shiftMeta(monthStore[key].meta,start,-n);
-  renderMonth();
-  // persist row structure (ADDED)
-  saveMonth(key);}
+  renderMonth(); saveMonth(key);
+}
 
-/* ---------------- Directory ---------------- */
+/* ===== Directory (unchanged UI) ===== */
 directoryHot=new Handsontable(document.getElementById('directory'),{
   data:[["","",""]],
   colHeaders:["Name","Email","Phone"], rowHeaders:true, minSpareRows:1,
   contextMenu:true, licenseKey:'non-commercial-and-evaluation'
 });
-function getDirectoryMap(){const map={};directoryHot.getData().forEach(r=>{const name=(r[0]||"").trim().toLowerCase();const email=(r[1]||"").trim();if(name&&email)map[name]=email;});return map;}
+function getDirectoryMap(){
+  const map={};
+  directoryHot.getData().forEach(r=>{
+    const name=(r[0]||"").trim().toLowerCase();
+    const email=(r[1]||"").trim();
+    if(name&&email) map[name]=email;
+  });
+  return map;
+}
 
-/* ---------------- Process Schedule ---------------- */
+/* ===== Parse schedule (unchanged logic) ===== */
 function parseSchedule(y, m) {
   const key = monthKey(y, m);
   const state = monthStore[key];
@@ -357,12 +373,8 @@ function parseSchedule(y, m) {
       const study = (data[r][c] || "").trim();
       const visit = (data[r][c + 1] || "").trim();
 
-      // Skip Travel/Stay/Drive rows
       const forbidden = ["TRAVEL","TRAVEL AM","TRAVEL PM","STAY","DRIVE"];
-      if (forbidden.includes(study.toUpperCase())) {
-        r++;
-        continue;
-      }
+      if (forbidden.includes(study.toUpperCase())) { r++; continue; }
 
       if (study && visit) {
         const wk = weekIndexForRowLocal(r);
@@ -394,14 +406,12 @@ function parseSchedule(y, m) {
           rr++;
         }
 
-        // ShiftLog entries
         roles.forEach(({ role, emp }) => {
           const email = emailMap[emp.toLowerCase()] || "";
           shiftLog.push([dateStr, study, visit, role, emp, email, site, pi]);
           summaryShifts[emp] = (summaryShifts[emp] || 0) + 1;
         });
 
-        // Unique visits counting
         if (dateObj) {
           const dKey = formatDate(dateObj);
 
@@ -434,7 +444,7 @@ function parseSchedule(y, m) {
   state.summarySite = Object.entries(siteVisits).map(([site, dates]) => [site, dates.size]);
 }
 
-/* ---------------- Reports ---------------- */
+/* ===== Reports (unchanged) ===== */
 function refreshMonthSelect(){
   const sel=document.getElementById('monthSelect');
   sel.innerHTML="";
@@ -443,7 +453,6 @@ function refreshMonthSelect(){
     o.value=k; o.textContent=k; sel.appendChild(o);
   });
 }
-
 function renderReports(){
   const sel=document.getElementById('monthSelect').value;
   if(!sel) return;
@@ -468,7 +477,6 @@ function renderReports(){
     s.summarySite
   );
 }
-
 function renderTable(id,hdrs,rows){
   let html = "<table class='out'><tr>" + hdrs.map(h=>`<th>${h}</th>`).join("") + "</tr>";
   rows.forEach(r=>{
@@ -478,7 +486,9 @@ function renderTable(id,hdrs,rows){
   document.getElementById(id).innerHTML = html;
 }
 
-/* ---------------- Init ---------------- */
+/* ===== Init ===== */
+window.renderReports = renderReports;
+window.refreshMonthSelect = refreshMonthSelect;
 renderMonth();
 </script>
 </body>
