--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
 <meta charset="UTF-8" />
 <title>Scheduler App</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable@14.3.0/dist/handsontable.full.min.css">
-<script src="https://cdn.jsdelivr.net/npm/handsontable@14.3.0/dist/handsontable.full.min.js"></script>
-
-<!-- 🔥 Firebase (compat) – minimal intrusion, no modules -->
-<script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore-compat.js"></script>
-
 <style>
   body { font-family: Arial, sans-serif; margin: 18px; }
   nav { margin-bottom: 12px; }
@@ -26,6 +19,12 @@
   table.out th, table.out td { border:1px solid #ccc; padding:6px; font-size:12px; }
   table.out th { background:#eee; }
 </style>
+
+<!-- Use ESM build of Handsontable -->
+<script type="module">
+  import Handsontable from "https://cdn.jsdelivr.net/npm/handsontable@14.3.0/esm/handsontable.js";
+  window.Handsontable = Handsontable;
+</script>
 </head>
 <body>
   <h1>Scheduler App</h1>
